--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -7,7 +7,6 @@ Django==5.1
 djangorestframework==3.15.2
 et-xmlfile==1.1.0
 fpdf==1.7.2
-gunicorn
 idna==3.7
 numpy==2.0.0
 openpyxl==3.1.4
@@ -15,6 +14,7 @@ pandas==2.2.2
 pillow==10.4.0
 pyreadline3==3.4.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
