--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,22 +1,57 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
 asgiref==3.8.1
+attrs==24.2.0
+beautifulsoup4==4.12.3
 certifi==2024.2.2
+cffi==1.17.1
 charset-normalizer==3.3.2
+colorama==0.4.6
 deap==1.4.1
+distro==1.9.0
 Django==5.1
 djangorestframework==3.15.2
 et-xmlfile==1.1.0
 fpdf==1.7.2
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.6
+httpx==0.27.2
 idna==3.7
+jiter==0.7.0
+multidict==6.1.0
+numpy==2.0.0
+openai==0.28.0
 openpyxl==3.1.4
+outcome==1.3.0.post0
+pandas==2.2.2
 pillow==10.4.0
+propcache==0.2.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 pyreadline3==3.4.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
+selenium==4.26.1
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.5
 sqlparse==0.5.1
+tqdm==4.66.6
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.1
+websocket-client==1.8.0
+wsproto==1.2.0
 xlrd==2.0.1
+yarl==1.17.1
