--- a/mysite/uwsgi.ini
+++ b/mysite/uwsgi.ini
@@ -1,12 +1,11 @@
 [uwsgi]
 chdir = /home/ec2-user/my-website/mysite
 module = mysite.wsgi:application
-
 home = /home/ec2-user/mysite
 
 master = true
 processes = 5
-socket = /home/ec2-user/my-website/mysite/mysite.sock
+socket = /tmp/mysite.sock
 chmod-socket = 666
 vacuum = true
 die-on-term = true
